fixed the links for the github deployment

--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
         footer { margin-top: 30px; }
     </style>
     <p> 
-        <a href="/index.html">About Phillip Chen</a>
+        <a href="https://pc35559.github.io/Resume-2026/index.html">About Phillip Chen</a>
     </p>
 </footer>
 
