--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 </body>
 
 <footer>
-  <a href="/contact.html">Contact Phillip Chen</a>
+  <a href="https://pc35559.github.io/Resume-2026/contact.html">Contact Phillip Chen</a>
   <p>Resume template replicated from <a href="https://resumegenius.com/blog/resume-help/best-color-for-resume#:~:text=Here%E2%80%99s%20an%20example%20of%20a%20resume%20color%20scheme%20that%20uses%20complementary%20colors%3A" target="#">this website</a></p>
 </footer>
 
